@@ -17,6 +17,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import java.net.URI;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.kitodo.api.validation.longtermpreservation.FileType;
@@ -101,8 +102,8 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF, Collections.singletonList(condition));
 
         assertEquals(LtpValidationResultState.ERROR, result.getState());
-        assertFalse(result.getConditionResults().get(0).getPassed());
-        assertEquals(LtpValidationConditionError.CONDITION_FALSE, result.getConditionResults().get(0).getError());
+        assertFalse(result.getConditionResults().getFirst().getPassed());
+        assertEquals(LtpValidationConditionError.CONDITION_FALSE, result.getConditionResults().getFirst().getError());
     }
 
     /**
@@ -120,10 +121,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF, Collections.singletonList(condition));
 
         assertEquals(LtpValidationResultState.ERROR, result.getState());
-        assertFalse(result.getConditionResults().get(0).getPassed());
+        assertFalse(result.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.INCORRECT_NUMBER_OF_CONDITION_VALUES,
-                result.getConditionResults().get(0).getError()
+                result.getConditionResults().getFirst().getError()
         );
     }
 
@@ -142,8 +143,8 @@ public class LongTermPreservationValidationIT {
 
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF, Collections.singletonList(condition));
         assertEquals(LtpValidationResultState.ERROR, result.getState());
-        assertFalse(result.getConditionResults().get(0).getPassed());
-        assertEquals(LtpValidationConditionError.CONDITION_FALSE, result.getConditionResults().get(0).getError());
+        assertFalse(result.getConditionResults().getFirst().getPassed());
+        assertEquals(LtpValidationConditionError.CONDITION_FALSE, result.getConditionResults().getFirst().getError());
     }
 
     /**
@@ -168,7 +169,7 @@ public class LongTermPreservationValidationIT {
                 LtpValidationConditionSeverity.ERROR);
 
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF,
-            Arrays.asList(new LtpValidationCondition[] {inBetweenCondition, lowerThanCondition, largerThanCondition }));
+            Arrays.asList(inBetweenCondition, lowerThanCondition, largerThanCondition));
 
         assertEquals(LtpValidationResultState.ERROR, result.getState());
         for (int i = 0; i < result.getConditionResults().size(); i++) {
@@ -191,10 +192,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF, Collections.singletonList(condition));
 
         assertEquals(LtpValidationResultState.ERROR, result.getState());
-        assertFalse(result.getConditionResults().get(0).getPassed());
+        assertFalse(result.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.PROPERTY_DOES_NOT_EXIST,
-                result.getConditionResults().get(0).getError()
+                result.getConditionResults().getFirst().getError()
         );
     }
 
@@ -213,10 +214,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult result = validator.validate(TIF_URI, FileType.TIFF, Collections.singletonList(condition));
 
         assertEquals(LtpValidationResultState.WARNING, result.getState());
-        assertFalse(result.getConditionResults().get(0).getPassed());
+        assertFalse(result.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.PROPERTY_DOES_NOT_EXIST,
-                result.getConditionResults().get(0).getError()
+                result.getConditionResults().getFirst().getError()
         );
     }
 
@@ -243,10 +244,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult invalidResult = validator.validate(TIF_URI, FileType.TIFF,
             Collections.singletonList(invalidCondition));
         assertEquals(LtpValidationResultState.ERROR, invalidResult.getState());
-        assertFalse(invalidResult.getConditionResults().get(0).getPassed());
+        assertFalse(invalidResult.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.CONDITION_FALSE,
-                invalidResult.getConditionResults().get(0).getError()
+                invalidResult.getConditionResults().getFirst().getError()
         );
     }
 
@@ -273,10 +274,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult invalidResult = validator.validate(TIF_URI, FileType.TIFF,
             Collections.singletonList(invalidCondition));
         assertEquals(LtpValidationResultState.ERROR, invalidResult.getState());
-        assertFalse(invalidResult.getConditionResults().get(0).getPassed());
+        assertFalse(invalidResult.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.CONDITION_FALSE,
-                invalidResult.getConditionResults().get(0).getError()
+                invalidResult.getConditionResults().getFirst().getError()
         );
     }
 
@@ -303,10 +304,10 @@ public class LongTermPreservationValidationIT {
         LtpValidationResult invalidResult = validator.validate(TIF_URI, FileType.TIFF,
             Collections.singletonList(invalidCondition));
         assertEquals(LtpValidationResultState.ERROR, invalidResult.getState());
-        assertFalse(invalidResult.getConditionResults().get(0).getPassed());
+        assertFalse(invalidResult.getConditionResults().getFirst().getPassed());
         assertEquals(
                 LtpValidationConditionError.CONDITION_FALSE,
-                invalidResult.getConditionResults().get(0).getError()
+                invalidResult.getConditionResults().getFirst().getError()
         );
     }
 
@@ -327,7 +328,7 @@ public class LongTermPreservationValidationIT {
         assertEquals(LtpValidationResultState.ERROR, invalidResult.getState());
         assertEquals(
                 LtpValidationConditionError.PATTERN_INVALID_SYNTAX,
-                invalidResult.getConditionResults().get(0).getError()
+                invalidResult.getConditionResults().getFirst().getError()
         );
     }
 
@@ -339,7 +340,7 @@ public class LongTermPreservationValidationIT {
         LongTermPreservationValidationInterface validator = new LongTermPreservationValidation();
 
         LtpValidationCondition wrongValuesCondition = new LtpValidationCondition("imageWidth",
-                LtpValidationConditionOperation.NON_EMPTY, Arrays.asList("60"),
+                LtpValidationConditionOperation.NON_EMPTY, List.of("60"),
                 LtpValidationConditionSeverity.ERROR);
 
         LtpValidationCondition validCondition = new LtpValidationCondition("imageWidth",
@@ -348,11 +349,11 @@ public class LongTermPreservationValidationIT {
 
         assertEquals(LtpValidationResultState.ERROR,
                 validator.validate(TIF_URI, FileType.TIFF,
-                        Arrays.asList(new LtpValidationCondition[] { wrongValuesCondition })).getState());
+                        List.of(wrongValuesCondition)).getState());
 
         assertEquals(LtpValidationResultState.VALID,
                 validator.validate(TIF_URI, FileType.TIFF,
-                        Arrays.asList(new LtpValidationCondition[] { validCondition })).getState());
+                        List.of(validCondition)).getState());
     }
 
     private LtpValidationResultState simpleValidateFile(URI file, FileType fileType) {
