@@ -86,7 +86,7 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         Pages.getMetadataEditorPage().openDetailView();
         
         // check it is visible now
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
     }
 
     /**
@@ -100,26 +100,26 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // open detail view and wait for openlayers canvas
         Pages.getProcessesPage().goTo().editMetadata(PROCESS_TITLE);
         Pages.getMetadataEditorPage().openDetailView();
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
 
         // remember initial zoom
         Double initialZoom = getOpenLayersZoom();
         assertTrue(initialZoom > 0);
 
         // zoom in, and check zoom increases
-        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> getOpenLayersZoom() > initialZoom);
 
         // zoom out, and check zoom returns to initial zoom level
-        findElementsByCSS(OPEN_LAYERS_ZOOM_OUT_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ZOOM_OUT_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> Math.abs(getOpenLayersZoom() - initialZoom) < EPSILON);
 
         // zoom in, and reset zoom, check zoom returns to initial zoom level
-        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
-        findElementsByCSS(OPEN_LAYERS_ZOOM_RESET_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ZOOM_RESET_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> Math.abs(getOpenLayersZoom() - initialZoom) < EPSILON);
     }
@@ -135,25 +135,25 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // open detail view and wait for openlayers canvas
         Pages.getProcessesPage().goTo().editMetadata(PROCESS_TITLE);
         Pages.getMetadataEditorPage().openDetailView();
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
 
         // check initial rotation is zero
         assertTrue(Math.abs(getOpenLayersRotation()) < EPSILON);
 
         // rotate left and check rotation is decreasing
-        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> getOpenLayersRotation() < 0.0);
 
         // rotate back, and check rotation returns to zero
-        findElementsByCSS(OPEN_LAYERS_ROTATE_RIGHT_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ROTATE_RIGHT_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> Math.abs(getOpenLayersRotation()) < EPSILON);
 
         // rotate left and reset to north, check rotation returns to zero
-        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
-        findElementsByCSS(OPEN_LAYERS_ROTATE_NORTH_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ROTATE_NORTH_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
         assertTrue(() -> Math.abs(getOpenLayersRotation()) < EPSILON);
     }
@@ -170,15 +170,15 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // open detail view and wait for openlayers canvas
         Pages.getProcessesPage().goTo().editMetadata(PROCESS_TITLE);
         Pages.getMetadataEditorPage().openDetailView();
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
 
         // remember initial zoom, rotation
         Double initialZoom = getOpenLayersZoom();
         Double initialRotation = getOpenLayersRotation();
 
         // rotate left and zoom in
-        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).get(0).click();
-        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).get(0).click();
+        findElementsByCSS(OPEN_LAYERS_ROTATE_LEFT_SELECTOR).getFirst().click();
+        findElementsByCSS(OPEN_LAYERS_ZOOM_IN_SELECTOR).getFirst().click();
         pollAssertTrue(() -> !isOpenLayersAnimating());
 
         // remember changed zoom, rotation
@@ -190,17 +190,17 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         assertTrue(Math.abs(initialRotation - changedRotation) > 0);
 
         // change to second image
-        findElementsByCSS(SECOND_THUMBNAIL_SELECTOR).get(0).click();
+        findElementsByCSS(SECOND_THUMBNAIL_SELECTOR).getFirst().click();
         
         // wait until second image has been loaded
         pollAssertTrue(
             () -> "Bild 1, Seite -".equals(
-                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).get(0).getText().strip()
+                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).getFirst().getText().strip()
             )
         );
 
         // wait until OpenLayers canvas is available
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
 
         // check that rotation and zoom was correctly applied to next image (and is not reset)
         assertTrue(Math.abs(getOpenLayersZoom() - changedZoom) < EPSILON);
@@ -218,12 +218,12 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // open metadata editor and detail view
         Pages.getProcessesPage().goTo().editMetadata(PROCESS_TITLE);
         Pages.getMetadataEditorPage().openDetailView();
-        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).get(0).isDisplayed());
+        pollAssertTrue(() -> findElementsByCSS(OPEN_LAYERS_CANVAS_SELECTOR).getFirst().isDisplayed());
         
         // image is thumbnail 2, which is the very first image, such that left buttons are disabled
-        assertEquals("Bild 2, Seite -", findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).get(0).getText().strip());
-        WebElement leftMany = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementMany").get(0);
-        WebElement rightMany = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementMany").get(0);
+        assertEquals("Bild 2, Seite -", findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).getFirst().getText().strip());
+        WebElement leftMany = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementMany").getFirst();
+        WebElement rightMany = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementMany").getFirst();
 
         // check left buttons are disabled and right buttons are enabled
         assertFalse(leftMany.isEnabled());
@@ -235,13 +235,13 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // wait for image 3 to be shown
         pollAssertTrue(
             () -> "Bild 3, Seite -".equals(
-                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).get(0).getText().strip()
+                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).getFirst().getText().strip()
             )
         );
 
         // find buttons again because image preview is re-rendered
-        WebElement leftOne = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").get(0);
-        WebElement rightOne = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementOne").get(0);
+        WebElement leftOne = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").getFirst();
+        WebElement rightOne = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementOne").getFirst();
 
         // check left buttons are enabled and right buttons are disabled
         assertTrue(leftOne.isEnabled());
@@ -253,13 +253,13 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         // wait for image 1 to be shown
         pollAssertTrue(
             () -> "Bild 1, Seite -".equals(
-                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).get(0).getText().strip()
+                findElementsByCSS(GALLERY_HEADING_WRAPPER_SELECTOR).getFirst().getText().strip()
             )
         );
 
         // find buttons again because image preview is re-rendered
-        leftOne = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").get(0);
-        rightOne = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementOne").get(0);
+        leftOne = findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").getFirst();
+        rightOne = findElementsByCSS("#imagePreviewForm\\:navigateToNextElementOne").getFirst();
 
         // both left and right buttons are enabled
         assertTrue(leftOne.isEnabled());
@@ -270,11 +270,11 @@ public class MetadataImagePreviewST extends BaseTestSelenium {
         assertTrue(rightOne.isDisplayed());
 
         // move mouse to main header menu
-        new Actions(Browser.getDriver()).moveToElement(findElementsByCSS("#menu").get(0)).perform();
+        new Actions(Browser.getDriver()).moveToElement(findElementsByCSS("#menu").getFirst()).perform();
 
         // check buttons are hidden now
         pollAssertTrue(
-            () -> !findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").get(0).isDisplayed()
+            () -> !findElementsByCSS("#imagePreviewForm\\:navigateToPreviousElementOne").getFirst().isDisplayed()
         );
     }
 
